# rss-agent

./: .gitignore  README.md  config.py  pyproject.toml  rss_agent_cli.py  rss_articles.db
tests/: test_rss_agent.py
