[project]
name = "onlyyou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "ipython>=9.6.0",
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "openai>=2.1.0",
    "ruff>=0.13.3",
    "streamlit>=1.50.0",
]
